# zelus

./: Cargo.toml
zelus/: Cargo.toml
zelus/examples/: auth.rs  custom_error.rs  documentation.rs  error_attributes.rs  full_inplace_implementation.rs  full_trait_implementation.rs  header_variable.rs  implementation_with_routes.rs  path_prefix.rs  path_variable.rs  payload.json  payload.rs  payload_custom.rs  query_variable.rs  result.rs  shared_error.rs  special_variable.rs  standalone_error.rs  tags.rs
zelus/src/: error.rs  lib.rs  router.rs  sdk.rs  special.rs  utils.rs
zelus/src/internal/: error.rs  header.rs  json.rs  mod.rs  serializer.rs  special.rs
zelus/src/responses/: file.rs  json.rs  mod.rs  redirect.rs  ws.rs
zelus/src/types/: jsonvec.rs  mod.rs  stream.rs
zelus_macros/: Cargo.toml
zelus_macros/src/: lib.rs  utils.rs
zelus_macros/src/error/: define.rs  mod.rs
zelus_macros/src/service/: args.rs  mod.rs  parse.rs  route.rs  utils.rs
zelus_macros/src/service/process/: header.rs  macros.rs  mod.rs  path.rs  payload.rs  query.rs  route.rs  special.rs
